2000-10-04  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-summary.el (mhc-summary-make-contents):
	add treats in case category-predicate nil.

2000-10-04  Toshihiko SHIMOKAWA  <toshi@tea.forus.or.jp>

	* emacs/00usage.jis: Untabified. Move some descriptions to
	../00usage.jis.  Delete some obsolete descrptions.
	
	* 00usage.jis: Merge descrption from emacs/00usage.jis. Change an
	order of descrption.

2000-10-04  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/00usage.jis: Change key bind in mhc-mode. Account for
	mhc-prefix-key.

	* emacs/mhc.el (mhc-prefix-key, mhc-prefix-map): New variable for
	'Emacs Minor Mode Conventions'.
	(mhc-mode-map): Use mhc-prefix-key and mhc-prefix-map.
	(mhc-mode): Change doc-string, used \\<mhc-mode-map> & \\[function].

2000-10-03  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/00usage.jis:
	change abount default category setting.

	* emacs/mhc.el (mhc-setup):
	setup mhc-default-caegory-predicate-sexp.

	* emacs/mhc.el (mhc-set-default-category):
	call mhc-rescan-month() after set a category.

	* emacs/mhc.el (mhc-expr-parse):
	New funcaion. recursive descent parser for category
	(mhc-got-month), (mhc-rescan-month),(mhc-scan-month),
	(mhc-insert-schedule): change interface to select category.

	* emacs/mhc-summary.el: (mhc-summary/insert-dayinfo),
	(mhc-summary-make-contents),
	(mhc-summary-make-todo-list): change interface to select categry.

	* emacs/mhc-ps.el:
	(mhc-ps/make-contents), (mhc-ps/process),
	(mhc-ps-preview), (mhc-ps-print), (mhc-ps-save),
	(mhc-ps-insert-buffer): change interface to select category.

2000-09-25  Yoshinari Nomura  <nom@quickhack.net>

	* today.in: assume duration is whole month in case --format=ps.

	* mhc-sync.in: more neat unconsistency check.

	* 00readme, 00readme.jis, 00usage.jis: Catch up current status.

	* emacs/00usage.jis: fix documents about X-SC-Category.

2000-09-21  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew/schedule-foldermsg): Support Mew 1.95b58